--- a/sass/modules/_header.scss
+++ b/sass/modules/_header.scss
@@ -28,37 +28,37 @@ header {
             z-index: 25;
         
             span { position:relative; top: 8px; font-size:3rem; }
-        
-        
-            ul.dropdown-menu { margin-top:25px; 
-            
-                li { position:relative; margin-right:0; /*padding:10px 0;*/
-                
-                
-                    :hover .emptyCircle {
-                        background-color:#fff;
-                    }
-                    :hover .circleI {
-                        background-color:#fff;
-                    }
-                    a { @include addPadding(10px o);}
-
-                    div.topPanel {
-                        width: 100%;
-                        height: 50px;
-                        background-color: #383838;
-                        position: relative;
-
-                        i { position:absolute; top:-20px; left:80%; font-size:3rem; color:#383838; }
-                        p { @include addPadding(15px 0 0 20px);}
-                    }
-
-                    .divider {  @include addMargin(0); }
-                    
-                }
-            }
-            ul.dropdown-menu-right { right:-15px; }
-            ul.discussionDrop { @include addMargin(10px 0); width:200px; padding-bottom:0; }
         }
+        
+        .dropdown-menu { margin-top:25px; 
+            
+            li { position:relative; margin-right:0; /*padding:10px 0;*/
+                    
+                    
+                 :hover {
+                    .emptyCircle {background-color:#fff;} 
+                    .circleI {background-color:#fff;}
+                    }
+
+                 a { @include addPadding(10px o);}
+     
+             }
+        }            
+        
+
+        .topPanel {
+            width: 100%;
+            height: 50px;
+            background-color: #383838;
+            position: relative;
+
+            i { position:absolute; top:-20px; left:80%; font-size:3rem; color:#383838; }
+            p { @include addPadding(15px 0 0 20px);}
+        }
+
+        .divider {  @include addMargin(0); }
+
+        .dropdown-menu-right { right:-15px; }
+        .discussionDrop { @include addMargin(10px 0); width:200px; padding-bottom:0; }
     }
 }
