--- a/sass/modules/_main.scss
+++ b/sass/modules/_main.scss
@@ -11,43 +11,33 @@ body {
 
 }
 
-.sidebarC { 
-    background-color:#505050; 
-    color: white;
-    position:relative;
-}
+.sidebarC { background-color:#505050; color: white; position:relative; }
 
-#topPanel { margin:0; position:relative; 
- div.bannerContainer { padding:0; }
- div {
-    .profPanel { 
-        width:445px; 
-        height:150px; 
-        background-color: #f2f2f2; 
-        position: absolute;
-        left:40px;
-        top:70px;
-        border-radius: 8px;
-        -moz-box-shadow:    3px 3px 3px 0px #666;    
-        -webkit-box-shadow: 3px 3px 3px 0px #666;
-        box-shadow:         3px 3px 3px 0px #666;
-       div {
-        .profPanelText { position:relative; top:10px; left:20px; }
-       }
+#topPanel { margin:0; position:relative; }
+.bannerContainer { padding:0; }
 
-       .profPanel p:first-child { font-size:3rem; font-weight:300; margin-bottom:3px; }
-       .profPanel p:first-child span { color:#9e9e9e; }
-       .profPanel p:nth-child(2) { font-size:2.2rem; color:#690800; margin-top:-8px; }
-       .profPanel ul { color:#9e9e9e; padding-top:5px; font-weight:300; }
-       .profPanel span { margin-right:8px; }
-
-        .profPanel img {
-            position:absolute;
-            right:-20px;
-            top:-20px;
-        }
+.profPanel { 
+    width:445px; 
+    height:150px; 
+    background-color: #f2f2f2; 
+    position: absolute;
+    left:40px;
+    top:70px;
+    border-radius: 8px;
+    -moz-box-shadow:    3px 3px 3px 0px #666;    
+    -webkit-box-shadow: 3px 3px 3px 0px #666;
+    box-shadow:         3px 3px 3px 0px #666;
+   
+   p {
+      :first-child { font-size:3rem; font-weight:300; margin-bottom:3px; }
+      :first-child span { color:#9e9e9e; }
+      :nth-child(2) { font-size:2.2rem; color:#690800; margin-top:-8px; }
     }
-
-
- }
+   
+   
+   ul { color:#9e9e9e; padding-top:5px; font-weight:300; }
+   span { margin-right:8px; }
+   img { position:absolute; right:-20px; top:-20px;}
 }
+
+.profPanelText { position:relative; top:10px; left:20px; }
