--- a/sass/modules/_vars.scss
+++ b/sass/modules/_vars.scss
@@ -5,5 +5,26 @@ $main-font: 'Lato', sans-serif;
 $font-size: 16px;
 
 $sNav-font-size: 1.45rem;
+$yellow-nav-font-size: 3rem;
 
 $header-size: 2em;
+
+
+$dark-grey-color : #333;
+$header-bg-color : #ffffff;
+$yellow-nav-color: #f3d83f;
+$plain-white-color: #fff;
+
+
+
+$topPanel-bg-color: #383838;
+$topPanel-i-color: #383838;
+$topPanel-font-size: 3rem;
+
+
+
+$sidebarC-bg-color:#505050;
+
+
+$profPanel-bg-color: #f2f2f2;
+$profPanel-ul-color: #9e9e9e;
